crates/rome_formatter/tests/specs/prettier/cursor/range-0.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range-0.js

---
# Input
```js
thisWontBeFormatted  ( 1  ,3)

<<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )

 <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
    
```

# Output
```js
thisWontBeFormatted  ( 1  ,3)

<<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )

 <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-0.js:3:3
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )
  │   ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ range-0.js:3:53
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )
  │                                                    -^ But this operator was encountered instead
  │                                                    │ 
  │                                                    This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ range-0.js:3:54
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )
  │                                                     -^ But this operator was encountered instead
  │                                                     │ 
  │                                                     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ range-0.js:3:67
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted  <|>  (2  ,3,   )
  │                                                                   ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-0.js:5:4
  │
5 │  <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
  │    ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax


```


